--- a/index.html
+++ b/index.html
@@ -17,16 +17,24 @@
 				type="text" 
 				name="new-task-input" 
 				id="new-task-input" 
-				placeholder="What do you have planned?" />
+				placeholder="Add song..." />
 			<input 
-				type="submit"
+				type="text" 
+				name="artist-name-input" 
+				id="artist-name-input" 
+				placeholder="Artist name..." />
+			<input 
+				type="submit" 
 				id="new-task-submit" 
-				value="Add task" />
+				value="Add track" />
 		</form>
+
 	</header>
+	
+	
 	<main>
 		<section class="task-list">
-			<h2>Tasks</h2>
+			<h2>songs</h2>
 
 			<div id="tasks">
 
